--- a/2021_07_13_PEFG_PEMF.md
+++ b/2021_07_13_PEFG_PEMF.md
@@ -1,77 +1,79 @@
-# INICIAR
-## Música -> distribuição dos dados
-#upgride de pacotes 'update.packages(repos='http://cran.rstudio.com/ ', ask=FALSE, checkBuilt=TRUE)'
+# Apresentação
 
-## Pastas 
+Tudo bem, Tarsila. Aqui vai um script detalhado do que vamos fazer, certinho. Espero que curta tanto a nálise quanto o programa. Vou dividir em alguns tópicos pra gente entender melhor, certo.
+- Preparar o dados;
+- Análise de suficiência amostral;
+- Análise de variância entre as UCs;
+- Diversidades das UCs.
+
+## Preparar os dados
+#### Informar o R
+Aqui, é importante indicar qual pasta será usada para a análise. 
+'''
 getwd()
 setwd("/home/user/Área de Trabalho/Bio/projeto_publ/2021_tarsila") 
-#Mudança de diretório para pasta do projeto
-#p_opendir(path.expand("~")) #abrir pasta
-#p_opendir(pacman:::p_basepath()) #abir pasta pacotes
-
-### Pacotes e entradas de arquivos
-if(!require(pacman, quietly = TRUE))(install.packages("pacman")) #agrupador de funções
-#pacman::p_load(readODS, openxlsx) 
-#setRepositories(ind=c(1:9))
-##### Pacote de leitor de ods (reserva)
-#caminho.do.arquivo <- "/home/user/Área de Trabalho/Serviços/ES - Rio Bananal/2021_03_06_grancol_rbananal.ods"
-#planilhatotal <- read_ods(caminho.do.arquivo,sheet = 1,col_names = T,na = "")
-#p_opendir(path.expand("~")) #abrir pasta
-#p_opendir(pacman:::p_basepath()) #abir pasta pacotes
-### Pacotes e entradas de arquivos
-if(!require(pacman, quietly = TRUE))(install.packages("pacman")) #agrupador de funções
-#pacman::p_load(readODS, openxlsx) 
-#setRepositories(ind=c(1:9))
-##### Pacote de leitor de ods (reserva)
-#caminho.do.arquivo <- "/home/user/Área de Trabalho/Serviços/ES - Rio Bananal/2021_03_06_grancol_rbananal.ods"
-#Xplanilhatotal <- read_ods(caminho.do.arquivo,sheet = 1,col_names = T,na = "")
-## Pacote de análise e leitura de dados, gráficos
-pacman::p_load(magrittr,dplyr) #magrittr para operações de pipe/dplyr para manipulador de dados
-##### Operador Pipe - usar o valor resultante da expressão do lado esquerdo como primeiro argumento da função do lado direito
-##### As medidas de dispersão são estatísticas descritivas, que quantificam de algum modo a variabilidade dos dados, geralmente utilizando como referência uma medida de posição.
-## Pacotes gŕaficos
+'''
+#### Pacotes e entradas de arquivos
+Vários pacotes que possivelmente utilizaremos.
+'''
+if(!require(pacman, quietly = TRUE))(install.packages("pacman")) 
+pacman::p_load(magrittr,dplyr) 
 pacman::p_load(ggplot2, devtools, ggrepel, graphics) 
-#scripta reservas
-#installed.packages('ggplot2')
-#install.packages("devtools")
-#fazer gráficos e extensões para salvar e inserir imagem
-#require(remotes)
-#remotes::install_version
-#install_version("ggplot2", version = "2.0.0", repos = "http://cran.us.r-project.org")
-#Library(ggplot2)
-## Pacote ecologia
-pacman::p_load(vegan)  #vegan para estatística ecológica/graphics para os gráficos
+pacman::p_load(vegan) 
+'''
 
-# Caregar Planilha
+#### Caregar Planilha
+'''
 pacman::p_load(openxlsx) 
 caminho.do.arquivo <- "/home/user/Área de Trabalho/Bio/projeto_publ/2021_tarsila/2021_07_06_tabela_atualizada.xlsx"
-planilhatotal <- read.xlsx(caminho.do.arquivo, #local do arquivo
-                           sheet = 1, # em qual planilha estão os dados
-                           colNames = T, # as colunas dos dados possuem nomes?
-                           na.strings = "NA") # como estão identificados os dados omissos?
-head(planilhatotal)
+planilhatotal <- read.xlsx(caminho.do.arquivo, 
+                           sheet = 1,
+                           colNames = T, 
+                           na.strings = "NA") 
+'''                           
 
-### Corrigir planilha
-##### Retirar os NA 
-p2 <- planilhatotal
-p2 <- subset(p2, RecordedBy == "Leonora Pires Costa") 
+Vamos verificar se deu certo?
+
+'head(planilhatotal)'
+
+#### Corrigir planilha
+Aqui vamos selecionar os dados. Primeiro vamos atribuir nossa tabela e denominar p2. 
+
+'p2 <- planilhatotal'
+
+Depois vamos selecionar os dados que queremos. Precisar ser PEFG e PEMF. Deu alguns exemplos que podem ser suados juntos. O primeiro eu selecineia quels coletados na orientação da Leo
+
+'p2 <- subset(p2, RecordedBy == "Leonora Pires Costa")'
+
+Depois em Dados primários, cidade de Castelo e tal.
+'''
 p2 <- subset(p2, Data == "Primary data") 
-p2 <- - subset(p2, City == "Castelo") 
-p2 <- subset(p2, !is.na(Day)) #tirar n/a da ano
-p2 <- subset(p2, !is.na(Order)) #tirar n/a da ano
-#planilhatotal <- subset(planilhatotal, !is.na(Pontos)) #tirar n/a da pontos
-##### Planilhas extras -> só álbum
-head(p2)
+p2 <- subset(p2, City == "Castelo") 
+'''
 
-### Teste de plots
-ts.plot(p2$Day)
+Aquik tiramos as células Na ou vazias das colunas de dia, ordem e espécie.
+'''
+p2 <- subset(p2, !is.na(Day))
+p2 <- subset(p2, !is.na(Order)) 
+p2 <- subset(p2, !is.na(Species)) 
+'''
 
+'head(p2)'
+
+#### Teste de plots
+Um teste simples
+
+'ts.plot(p2$Day)'
+
+Um gráfico um pouco mais elaborado.
+'''
 ggplot(p2, aes(x = Altitude, y = Species, colour = Locality)) + 
   geom_boxplot() +
   #geom_smooth(method = lm, se = TRUE) + 
   theme_classic()
 #ggsave("1.Species/altitude.png",width = 10, height = 6, dpi = 300)
-  
+'''
+
 ### Correlação
 p2 %>% 
   subset(Altitude  > 0) %$% #escolher a partir dos dados (relação de alt com as anos)
