--- a/2021_07_13_PEFG_PEMF.md
+++ b/2021_07_13_PEFG_PEMF.md
@@ -9,28 +9,28 @@ Tudo bem, Tarsila. Aqui vai um script detalhado do que vamos fazer, certinho. Es
 ## Preparar os dados
 #### Informar o R
 Aqui, é importante indicar qual pasta será usada para a análise. 
-´´´
+```
 getwd()
 setwd("/home/user/Área de Trabalho/Bio/projeto_publ/2021_tarsila") 
-´´´
+```
 #### Pacotes e entradas de arquivos
 Vários pacotes que possivelmente utilizaremos.
-'''
+```
 if(!require(pacman, quietly = TRUE))(install.packages("pacman")) 
 pacman::p_load(magrittr,dplyr) 
 pacman::p_load(ggplot2, devtools, ggrepel, graphics) 
 pacman::p_load(vegan) 
-'''
+```
 
 #### Caregar Planilha
-'''
+```
 pacman::p_load(openxlsx) 
 caminho.do.arquivo <- "/home/user/Área de Trabalho/Bio/projeto_publ/2021_tarsila/2021_07_06_tabela_atualizada.xlsx"
 planilhatotal <- read.xlsx(caminho.do.arquivo, 
                            sheet = 1,
                            colNames = T, 
                            na.strings = "NA") 
-'''                           
+```                           
 
 Vamos verificar se deu certo?
 
@@ -46,17 +46,17 @@ Depois vamos selecionar os dados que queremos. Precisar ser PEFG e PEMF. Deu alg
 'p2 <- subset(p2, RecordedBy == "Leonora Pires Costa")'
 
 Depois em Dados primários, cidade de Castelo e tal.
-'''
+```
 p2 <- subset(p2, Data == "Primary data") 
 p2 <- subset(p2, City == "Castelo") 
-'''
+```
 
-Aquik tiramos as células Na ou vazias das colunas de dia, ordem e espécie.
-'''
+Aqui tiramos as células Na ou vazias das colunas de dia, ordem e espécie.
+```
 p2 <- subset(p2, !is.na(Day))
 p2 <- subset(p2, !is.na(Order)) 
 p2 <- subset(p2, !is.na(Species)) 
-'''
+```
 
 'head(p2)'
 
@@ -66,13 +66,13 @@ Um teste simples
 'ts.plot(p2$Day)'
 
 Um gráfico um pouco mais elaborado.
-'''
+```
 ggplot(p2, aes(x = Altitude, y = Species, colour = Locality)) + 
   geom_boxplot() +
   #geom_smooth(method = lm, se = TRUE) + 
   theme_classic()
 #ggsave("1.Species/altitude.png",width = 10, height = 6, dpi = 300)
-'''
+```
 
 ### Correlação
 p2 %>% 
