--- a/2021_07_13_PEFG_PEMF.md
+++ b/2021_07_13_PEFG_PEMF.md
@@ -8,13 +8,13 @@ Tudo bem, Tarsila. Aqui vai um script detalhado do que vamos fazer, certinho. Es
 
 ## Preparar os dados
 #### Informar o R
-Aqui, é importante indicar qual pasta será usada para a análise. 
+Aqui, é importante indicar qual pasta será usada para a análise. Primeiro precisamos indicar a pasta escrevendo o caminho dela dentro do seu computador. Algo como C://usuário.... dentro das aspas. Abaixo o meu:
 ```
 getwd()
 setwd("/home/user/Área de Trabalho/Bio/projeto_publ/2021_tarsila") 
 ```
 #### Pacotes e entradas de arquivos
-Vários pacotes que possivelmente utilizaremos.
+Vamos instalar logo vários pacotes que possivelmente utilizaremos para selecionar dados, afzer gráficos e tal.
 ```
 if(!require(pacman, quietly = TRUE))(install.packages("pacman")) 
 pacman::p_load(magrittr,dplyr) 
@@ -32,18 +32,18 @@ planilhatotal <- read.xlsx(caminho.do.arquivo,
                            na.strings = "NA") 
 ```                           
 
-Vamos verificar se deu certo?
+Vamos verificar se deu certo puxar a nossa tabela?
 
-'head(planilhatotal)'
+`head(planilhatotal)`
 
 #### Corrigir planilha
 Aqui vamos selecionar os dados. Primeiro vamos atribuir nossa tabela e denominar p2. 
 
-'p2 <- planilhatotal'
+`p2 <- planilhatotal`
 
-Depois vamos selecionar os dados que queremos. Precisar ser PEFG e PEMF. Deu alguns exemplos que podem ser suados juntos. O primeiro eu selecineia quels coletados na orientação da Leo
+Depois vamos selecionar os dados que queremos. Precisar ser PEFG e PEMF. Deu alguns exemplos que podem ser suados juntos. O primeiro eu selecinei aqueles coletados na orientação da Leo
 
-'p2 <- subset(p2, RecordedBy == "Leonora Pires Costa")'
+`p2 <- subset(p2, RecordedBy == "Leonora Pires Costa")`
 
 Depois em Dados primários, cidade de Castelo e tal.
 ```
@@ -51,21 +51,21 @@ p2 <- subset(p2, Data == "Primary data")
 p2 <- subset(p2, City == "Castelo") 
 ```
 
-Aqui tiramos as células Na ou vazias das colunas de dia, ordem e espécie.
+Aqui tiramos as células NA ou vazias das colunas de dia, ordem e espécie.
 ```
 p2 <- subset(p2, !is.na(Day))
 p2 <- subset(p2, !is.na(Order)) 
 p2 <- subset(p2, !is.na(Species)) 
 ```
 
-'head(p2)'
+`head(p2)`
 
 #### Teste de plots
 Um teste simples
 
-'ts.plot(p2$Day)'
+`ts.plot(p2$Day)`
 
-Um gráfico um pouco mais elaborado.
+Um gráfico um pouco mais elaborado. Vamos plotar as espécies no eixo y e as altitudes no eixo x, com cores vamos diferenciar as UCs.
 ```
 ggplot(p2, aes(x = Altitude, y = Species, colour = Locality)) + 
   geom_boxplot() +
@@ -74,156 +74,136 @@ ggplot(p2, aes(x = Altitude, y = Species, colour = Locality)) +
 #ggsave("1.Species/altitude.png",width = 10, height = 6, dpi = 300)
 ```
 
-### Correlação
-p2 %>% 
-  subset(Altitude  > 0) %$% #escolher a partir dos dados (relação de alt com as anos)
-  cor.test(Altitude, CodSp) #correlação dos dados selecionados, numéricos
-#existe correlação negativa entre altitude e espécie (p=1.02e-13)
+Parece que deu tudoc erto, então vamos prosseguir,
 
-#CORRELAÇÃO LINEAR#
-#Análise de Variância (Espécie e altitude)
-#(A Análise de Variância (ANOVA) trata-se de um método estatı́stico que permite
-#realizar comparações simultâneas entre duas ou mais médias, ou seja, permite testar hipóteses sobre médias de distintas populações)
-#Pressuposto: Todas as observações devem ser independentes; As observações em cada grupo devem possuir uma distribuição, 
-#aproximadamente normal; As variâncias em cada grupo devem ser aproximadamente iguais.
-#aggregate(Altitude ~ CodSp, planilhatotal, var) #Variação codsp por altitude
-#bartlett.test(Altitude ~ CodSp, planilhatotal) #h0 igualdade das variância
-#p significante, h0 recusada, desigualdade
-#shapiro.test(planilhatotal$Altitude[planilhatotal$Extrato == "3"]) #ho normalidade dos dados com extrato 3
-#p significante, dados não normais
-dicalt <- lm(p2$Locality ~ p2$Species, data = p2) #relação de espécie (variável dependente) 
+## Análise de suficiência amostral
+Vamos começar com uma análise para ver a suficiência amostral de cada local, tudo bem. Primeiro um pacote que permite criar tabelas a partir das nossas.
 
-#e altitude (independente)
-anova(dicalt) #h0 = não variável/ F= diferença das médias / a variação de altitude média por espécie é de 1310m
-summary(dicalt) #R = explicação (mais perto de 1 melhor) 
-#p significativo, pelo menos um dos anos se comporta de forma diferente
-confint(dicalt)
+`pacman::p_load(reshape2)`
 
-#pacman::p_load(car)
-#avPlots(dicalt)
+Agora vamos selecionar a UC. Primeiro para PEFG
 
-#dicalt <- lm(tam$Altitude ~ tam$Species, data = tam) #relação de espécie (variável dependente) 
-#e altitude (independente)
-#anova(dicalt) #h0 = não variável/ F= diferença das médias
-#summary(dicalt) #R = explicação (mais perto de 1 melhor) 
-#confint(dicalt)
+`p3 <- subset(p2, Locality == "PEFG")`
 
-ggplot(p2, aes(x = CodSp, y = Altitude)) + 
-  geom_point() +
-  geom_smooth(method = lm, se = TRUE) + theme_classic() #correlação negativa
+Vamos montar uma tabela utilizando a data de coleta pelas espécies coletadas. Utilizamremos como base a planilha p3 só com PEFG e nominar de acum
+```
+acum<-reshape2::dcast(p3, Year + Month + Day ~ Species)
+acum=data.frame(acum, row.names = 1)
+```
 
-#Análise dos resíduos
-#par(mfrow = c(1, 2))
-#plot(residuals(dicalt), xlab = "Indice da observação",
-     #ylab = "Resíduos", ylim = c(-1, 1))
-#hist(residuals(dicalt), include.lowest = TRUE, right = FALSE,
-     #main = "", xlab = "Resíduos", ylab = "Frequência",
-     #col = "gray")
-#par(mfrow=c(1,1)) 
+Vamos ver?
 
-#par(mfrow = c(1, 2))
-#plot(fitted(dicalt),residuals(dicalt),xlab="Valores Ajustados",ylab="Resíduos") 
-#abline(h=0) 
-#plot(planilhatotal$Altitude,residuals(dicalt),xlab="Altitude",ylab="Resíduos") 
-#abline(h=0)
-#par(mfrow=c(1,1)) 
-
-bartlett.test(data=tam, Altitude ~ Species) #Teste de Bartlett para Homogeneidade de Variâncias para resíduos
-shapiro.test(dicalt$residuals)
+`head(acum)`
 
 
-#Significância entre altitude e espécie
-require(jtools,rpart,vegan)
-pacman::p_load(jtools, sandwich, lme4, ggstance) #,svyglm) #plot lm
-#obs some A. cursos, acho que o (intecep é ele)
-summary(aov(planilhatotal$Altitude ~ factor(planilhatotal$Species))) #signifcância da assembléia por altitude
-a<-lm(planilhatotal$Altitude ~ factor(planilhatotal$Species)) #signifcância da assembléia por altitude
-#pacman::p_load(car)
-#avPlots(a)
+Vamos deixar apenas a coluna de dias:
+```
+excluir <- c("Year", "Month")
+acum <- acum[,!(names(acum)%in% excluir)]
+head(acum)
+```
 
-summary(lm(p2$Altitude ~ p2$Species)) #signifcância das espécies por altitude
+Agora um gráfico simples de acumualção
 
-#anova(lm(planilhatotal$Altitude ~ planilhatotal$Species)) #signifcância das espécies por altitude
-a<-lm(p2$Altitude ~ p2$Species)
-#plot(a, which=c(1,2,3,4,5,6))
-#summ(a)
-#summ(a, robust = "HC1")
-#summ(a, scale = TRUE, n.sd = 2)
-#summ(a, center = TRUE)
-summ(a, confint = TRUE, digits = 3)
+```
+acumplot<-specaccum(acum) 
+acumplot
+plot(acumplot)
+```
 
-#glm(planilhatotal$Altitude ~ planilhatotal$Species)
-b<-glm(Altitude ~ Species, data = p2)
-#summ(b)
-#summ(b, exp = TRUE)
-#c<-lmer(planilhatotal$Altitude ~ planilhatotal$Species) #randomização, não deu certo
-jtools::plot_summs(b)
-#plot_summs(b)
-#plot_summs(b, scale = TRUE)
-#plot_summs(b, scale = TRUE, inner_ci_level = .9)
-plot_summs(b, scale = TRUE, plot.distributions = TRUE, inner_ci_level = .9)
-#pacman::p_load(car)
-#avPlots(b)
+Fazer aquele upgride aqui
+```
+plot(acumplot,ci.type="poly",col="black",lwd=2,ci.lty=0,ci.col="lightgrey",ylab="Riqueza",
+     xlab="Dias amostrais",main="Curva de acumulação de espécies para o Parque estadual do Forno Grande",las=1,font=1.5,font.lab=1.5,cex.lab=1,cex.axis=1) 
+```
 
-fit <- lm(Year ~ Trilha, data = p2) #some os primeiros de cada grupo
-summ(fit)
-effect_plot(fit, pred = Order, interval = TRUE, plot.points = TRUE) #não faz sentido
-plot_summs(fit, scale = TRUE, plot.distributions = TRUE, inner_ci_level = .9)
+### PEMF
+Fazer de novo, só lembrar de trocar em p3... Locality == "PEMF") e na legenda.
 
-#coef(a)
-#plot(resid(a) ~ fitted(a)) #resíduos
-#predict(a, data.frame( dap=c(10,50,100) ) )
-#predict(a, data.frame( dap=range(planilhatotal$Altitude) ) )
 
-#summary(aov(planilhatotal$Altitude ~ factor(planilhatotal$Family))) #signifcância da assembléia por altitude
-#plot(aov(planilhatotal$Altitude ~ factor(planilhatotal$Espécie)))
+## Análise de variância entre as UC
+Vamos ver se nossos dados são de distribuição normal ou não. Primeiro vamos instalar o pacote para as análises.
 
-#NORMALIDADE#
-#Teste de significância CRD (CV, Shapiro-Wilk, Homogenety, Tukey)
-pacman::p_load(ExpDes, ExpDes.pt) #Expdes - pacote de análise, normalidade, Turkey, shapiro-wilk e afins
-crd(p2$Locality, p2$Altitude, mcomp = "tukey", sigF = 0.01, sigT #as tabelas tem que ser iguais
-    = 0.01)
-    
-crd(p2$Order, p2$Altitude, mcomp = "tukey", sigF = 0.01, sigT #as tabelas tem que ser iguais
-    = 0.01)
-#não foi considerado normal,homocedástico,Tukey deu todos diferentes (ele separou as altitudes, talvez usar)
-#crd(planilhatotal$Faixa1, planilhatotal$Altitude, mcomp = "ccboot", sigF = 0.01, sigT #as tabelas tem que ser iguais
-    #= 0.01)
-  #usso de ccboot - bootstrap multiple comparison's test
+`pacman::p_load(ExpDes, ExpDes.pt, fitdistrplus)`
 
-#teste de agrupamento
-#dic(planilhatotal$Microregion_wwf, planilhatotal$Altitude, mcomp='sk', sigT = 0.01) 
-#?dic
+Depois montar uma tabel onde teremos os dias de coleta e as localidade por sua abundância.
 
-   
-#Normalidade
-pacman::p_load(fitdistrplus) #análise de normalidade
-#?descdist
-#?shapiro.test
-shapiro.test(p2$Altitude) #ho-normal / dados não normal
-descdist(p2$Altitude, boot = 500, discrete = F, graph = T) #distribuição normal
+`p3<-reshape2::dcast(p3, Date + Locality ~ Class, value.var = "individualCount")`
 
-#?fitdist
-fit.MF.normal <- fitdist(p2$Altitude, "norm") #gráfico de distribuição normal / Altitude distribuição normal
-plot(fit.MF.normal, demp = TRUE)
+Agora vamos rodar uma análise mútipla, ela vai ver a viariação entre as localidade e os sucesso de amostragem (ANOVA). Análise de Variância (ANOVA) trata-se de um método estatı́stico que perimte realizar comparações simultâneas entre duas ou mais médias, ou seja, permite testar hipóteses sobre médias de distintas populações. 
+Pressuposto: 
+- Todas as observações devem ser independentes; 
+- As observações em cada grupo devem possuir uma distribuição aproximadamente normal; 
+- As variâncias em cada grupo devem ser aproximadamente iguais.
 
+```
+dicalt <- lm(Mammalia ~ Locality, data = p3) 
+anova(dicalt)
+summary(dicalt)
+```
+
+Percebe-se, em Pr(>|F|) que p é muito pequeno, vai em desacordo com a hipótese nula em que as duas localidades são iguais, então existe diferença no sucesso de amostragem entre as UCs.
+
+Vamos ver isso em gráfico que mostra por dia de coleta quanto de abudância tivemos para cada UC.
+```
+ggplot(p3, aes(x = Date, y = Mammalia, fill = Locality)) + 
+  geom_point(size = 4, alpha = 0.7) +
+  geom_smooth(method = lm, se = TRUE) + 
+  scale_x_continuous(breaks = 0:20) +
+  theme_classic()
+#ggsave("1.Abundancia  por data.png",width = 10, height = 6, dpi = 300)
+```
+Uma forma de ver a diferenã entre as localidades e colocando em um gráfico. Primeiro os pacotes, claro.
+```
+pacman::p_load(ggpubr,reshape, psych, exactRankTests) 
+install.packages(exactRankTests)`
+```
+
+Fazendo um boxplot das abundância entre as UCs fica evidente que existe uma grande diferença.
+```
+ggboxplot(p3, x = "Date", y = "Mammalia", color = "Locality", 
+    palette = c("#00AFBB", "#E7B800"), 
+    fill = "Locality", 
+    order = c("PEMF", "PEFG"), 
+    ylab = "Abundância", xlab = "Locality")
+```
+
+Mas, pensando nas premissas, será que os ddos são normais? Vamos testar isso com os seguintes pacotes.
+`pacman::p_load(fitdistrplus)`
+
+Primeiro PEMF 
+```
+p4 <- subset(p3, Locality == "PEFG")
+shapiro.test(p3$Mammalia) 
+```
+A Hipótese nula nos dia que a distribuição é normal. Essa hipótese foi negada, então os dados não são normais. Vamos ver isso em gráfico?
+```
+fit.MF.normal <- fitdist(p4$Mammalia, "norm") #gráfico de distribuição normal / Altitude distribuição normal
 denscomp(fit.MF.normal, addlegend=TRUE)
-#ppcomp(fit.MF.normal, addlegend=FALSE)
-#qqcomp(fit.MF.normal, addlegend=FALSE)
+```
+Bom, as abundâncias para PEMF não estão em ditribuição normal, sendo que a maioria da abundãncia por dia era de 5 a 10 indivíduos. mas chegando a 35.
 
-#fit.MF.normal <- fitdist(planilhatotal$Altitude, "nbinom") #gráfico de distribuição normal / Altitude distribuição normal
-#plot(fit.MF.normal)
+Teste o mesmo para PEMF, lembrado de trocar em p4 o PEFG para PEMF. 
 
-#Distribuição dos Dados
-#hist(planilhatotal$Altitude,probability=F,col="lightgray", #gráfico de distribuição normal/ probability = TRUE dá a prob
-     #main="Elevational Values",ylab="Density", xlab = "Elevational") 
-#hist(planilhatotal$Year,probability=F,col="lightgray", #gráfico de distribuição normal/ probability = TRUE dá a prob
-     #main="Normal Anos",ylab="Densidade", xlab = "Média") 
-#hist(planilhatotal$Extrato1,probability=F,col="lightgray", #gráfico de distribuição normal/ probability = TRUE dá a prob
-     #main="Normal Extrato",ylab="Densidade", xlab = "Média") 
+Nesse caso, uma outra análise de variância é necessário, no caso um teste de Wilcox. Para isso precisamos selecionar os dados.
+Primeiro para PEMF
+```
+PEMF <- subset(p3, Locality == "PEMF")
+PEMF <- sample(PEMF$Mammalia,size=40, replace=TRUE)
+```
+Agora para PEFG
+```
+PEFG <- subset(p3, Locality == "PEFG")
+PEFG <- sample(PEFG$Mammalia,size=40, replace=TRUE)
+```
+Por fim o teste.
+```
+res <- wilcox.exact(PEFG,PEMF, paired = TRUE) 
+res
+```
+Note que o p deu muito pequeno, negando a hipótese nula de que são iguais, ou seja, são realmente diferentes.
 
-#ylim=c(0,0.5),xlim=c(-3,3))
-boxplot(p2$Altitude~p2$Locality, ylab="Elevational", xlab="Elevational Gradient", col="#53868B") #boxplot de gradiente de altitude por UC
+
 
 ####### Diversidade ##########
 
