--- a/2021_07_13_PEFG_PEMF.md
+++ b/2021_07_13_PEFG_PEMF.md
@@ -1,12 +1,12 @@
 # Apresentação
 
-Tudo bem, Tarsila. Aqui vai um script detalhado do que vamos fazer, certinho. Espero que curta tanto a nálise quanto o programa. Vou dividir em alguns tópicos pra gente entender melhor, certo.
-- Preparar o dados;
-- Análise de suficiência amostral;
-- Análise de variância entre as UCs;
-- Diversidades das UCs.
+Tudo bem, Tarsila. Aqui vai um script detalhado do que vamos fazer, certinho. Espero que curta tanto a análise quanto o programa. Vou dividir em alguns tópicos pra gente entender melhor, certo.
+- 1. Preparar o dados;
+- 2. Análise de suficiência amostral;
+- 3. Análise de variância entre as UCs;
+- 4. Diversidades das UCs.
 
-## Preparar os dados
+## 1. Preparar os dados
 #### Informar o R
 Aqui, é importante indicar qual pasta será usada para a análise. Primeiro precisamos indicar a pasta escrevendo o caminho dela dentro do seu computador. Algo como C://usuário.... dentro das aspas. Abaixo o meu:
 ```
@@ -34,14 +34,14 @@ planilhatotal <- read.xlsx(caminho.do.arquivo,
 
 Vamos verificar se deu certo puxar a nossa tabela?
 
-`head(planilhatotal)`
+`summary(planilhatotal)`
 
 #### Corrigir planilha
 Aqui vamos selecionar os dados. Primeiro vamos atribuir nossa tabela e denominar p2. 
 
 `p2 <- planilhatotal`
 
-Depois vamos selecionar os dados que queremos. Precisar ser PEFG e PEMF. Deu alguns exemplos que podem ser suados juntos. O primeiro eu selecinei aqueles coletados na orientação da Leo
+Depois vamos selecionar os dados que queremos. Precisar ser PEFG e PEMF. Deu alguns exemplos que podem ser usados juntos. O primeiro eu selecionei aqueles coletados e catalogados como Leonora Pires Costas, a chefa.
 
 `p2 <- subset(p2, RecordedBy == "Leonora Pires Costa")`
 
@@ -59,7 +59,7 @@ p2 <- subset(p2, !is.na(Order))
 p2 <- subset(p2, !is.na(Species)) 
 ```
 
-`head(p2)`
+`summary(p2)`
 
 #### Teste de plots
 Um teste simples
@@ -69,7 +69,7 @@ Um teste simples
 Um gráfico um pouco mais elaborado. Vamos plotar as espécies no eixo y e as altitudes no eixo x, com cores vamos diferenciar as UCs.
 ```
 ggplot(p2, aes(x = Date, y = Species, colour = Order)) + 
-  geom_boxplot() +
+  geom_point(size = 6, alpha = 0.7) +
   #geom_smooth(method = lm, se = TRUE) + 
   scale_x_continuous(breaks = 0:20) +
   facet_grid(Locality~.) +
@@ -77,9 +77,9 @@ ggplot(p2, aes(x = Date, y = Species, colour = Order)) +
 #ggsave("1.Species/Data.png",width = 10, height = 6, dpi = 300)
 ```
 
-Parece que deu tudoc erto, então vamos prosseguir,
+Parece que deu tudo certo, então vamos prosseguir,
 
-## Análise de suficiência amostral
+## 2. Análise de suficiência amostral
 Vamos começar com uma análise para ver a suficiência amostral de cada local, tudo bem. Primeiro um pacote que permite criar tabelas a partir das nossas.
 
 `pacman::p_load(reshape2)`
@@ -98,14 +98,14 @@ acum=data.frame(acum, row.names = 1)
 Vamos ver?
 `head(acum)`
 
-Agora um gráfico simples de acumualção
+Agora um gráfico simples de acumualção.
 ```
 acumplot<-specaccum(acum) 
 acumplot
 plot(acumplot)
 ```
 
-Fazer aquele upgride aqui
+Fazer aquele upgride aqui.
 ```
 plot(acumplot,ci.type="poly",col="black",lwd=2,ci.lty=0,ci.col="lightgrey",ylab="Riqueza",
      xlab="Dias amostrais",main="Curva de acumulação de espécies para o Parque Estadual do Forno Grande",las=1,font=1.5,font.lab=1.5,cex.lab=1,cex.axis=1) 
@@ -115,14 +115,17 @@ plot(acumplot,ci.type="poly",col="black",lwd=2,ci.lty=0,ci.col="lightgrey",ylab=
 Fazer de novo, só lembrar de trocar em p3... Locality == "PEMF") e na legenda.
 
 
-### Análise de variância entre as UC
-Vamos ver se nossos dados são de distribuição normal ou não. Primeiro vamos instalar o pacote para as análises.
+### 3. Análise de variância entre as UC
+Primeiro vamos instalar o pacote para as análises.
 
 `pacman::p_load(ExpDes, ExpDes.pt, fitdistrplus)`
 
 Depois montar uma tabela onde teremos os dias de coleta e as localidade por sua abundância. Vamos subistituir a tabela p3.
 
-`p3<-reshape2::dcast(p2, Date + Locality ~ Class, value.var = "individualCount", fun = length)`
+```
+p3<-reshape2::dcast(p2, Date + Locality ~ Class, value.var = "individualCount", fun = length)
+head(p3)
+```
 
 Agora vamos rodar uma análise mútipla, ela vai ver a viariação entre as localidade e os sucesso de amostragem (ANOVA). Análise de Variância (ANOVA) trata-se de um método estatı́stico que perimte realizar comparações simultâneas entre duas ou mais médias, ou seja, permite testar hipóteses sobre médias de distintas populações. 
 Pressuposto: 
@@ -141,28 +144,30 @@ Percebe-se, em Pr(>|F|) que p é muito pequeno, vai em desacordo com a hipótese
 Vamos ver isso em gráfico que mostra por dia de coleta quanto de abudância tivemos para cada UC.
 ```
 ggplot(p3, aes(x = Date, y = Mammalia, fill = Locality)) + 
-  geom_point(size = 4, alpha = 0.7) +
+  geom_point(aes(color = Locality), size = 4, alpha = 0.7) +
   geom_smooth(method = lm, se = TRUE) + 
+  ggtitle("Regressão linear entre a data de coleta e abundância para as Ucs") + 
   scale_x_continuous(breaks = 0:20) +
   theme_classic()
 #ggsave("1.Abundancia  por data.png",width = 10, height = 6, dpi = 300)
 ```
-Uma forma de ver a diferenã entre as localidades e colocando em um gráfico. Primeiro os pacotes, claro.
+Uma forma de ver a diferença entre as localidades é colocando em um gráfico. Primeiro os pacotes, claro.
 `pacman::p_load(ggpubr,reshape, psych, exactRankTests)`
 
-Fazendo um boxplot das abundância entre as UCs fica evidente que existe uma grande diferença.
+Fazendo um boxplot das abundância entre as UCs fica evidente que existe uma grande diferença  o sucesso de registro.
 ```
 ggboxplot(p3, x = "Date", y = "Mammalia", color = "Locality", 
     palette = c("#ff4308", "#00AFBB"), 
     fill = "Locality", 
     order = c("PEMF", "PEFG"), 
-    ylab = "Abundância", xlab = "Locality")
+    ylab = "Riqueza", xlab = "UCs")
 ```
 
 ### Normalidade
-Mas, pensando nas premissas, será que os ddos são normais? Vamos testar isso com os seguintes pacotes.
+Mas, pensando nas premissas, será que os dados são normais? Vamos testar isso com os seguintes pacotes.
 `pacman::p_load(fitdistrplus)`
 
+#### PEFG
 Primeiro PEFG
 ```
 p4 <- subset(p3, Locality == "PEFG")
@@ -175,11 +180,12 @@ denscomp(fit.MF.normal, addlegend=TRUE)
 ```
 Bom, as abundâncias para PEFG não estão em ditribuição normal, sendo que a maioria da abundãncia por dia era de 5 a 10 indivíduos. mas chegando a 35.
 
+#### PEMF
 Teste o mesmo para PEMF, lembrado de trocar em p4 o PEFG para PEMF. 
 
 ### Análise de variância entre as UC não paramétrico
 Nesse caso, uma outra análise de variância é necessário, no caso um teste de Wilcox. Para isso precisamos selecionar os dados.
-Primeiro para PEMF
+Primeiro para PEMF.
 ```
 PEMF <- subset(p3, Locality == "PEMF")
 PEMF <- sample(PEMF$Mammalia,size=40, replace=TRUE)
@@ -196,7 +202,7 @@ res
 ```
 Note que o p deu muito pequeno, negando a hipótese nula de que são iguais, ou seja, são realmente diferentes.
 
-## Índices de diversidade para as UCs.
+## 4. Índices de diversidade para as UCs.
 
 Vamos montar uma tabela onde teremos as Espécies pela Localidade e avisar que existe um cabeçalho para ver os dados.
 ```
@@ -204,7 +210,7 @@ p3<-reshape2::dcast(p2, Species ~ Locality)
 p3=data.frame(p3, row.names=1)
 p3
 ```
-Agora para o calculo iremos fazer uma tabela de localidades por espécie. 
+Agora para o cálculo iremos fazer uma tabela de localidades por espécie. 
 ```
 p3<-reshape2::dcast(p2, Locality ~ Species)
 p3=data.frame(p3, row.names=1)
@@ -217,17 +223,21 @@ S <- specnumber(p3)
 S
 ```
 
-Vamos também estimar a riqueza. Perceba que ela considerou tudo a mesma coisa. 
-`pool<-specpool(p3)`
+Vamos também estimar a riqueza. Perceba que ela considerou tudo a mesma coisa.
+```
+pool<-specpool(p3)
+pool
+```
 
-Primeiro vamos selecionar as tabelas. Vamos fazer duas. Uma indicando a abundância de espécies por dia, denominada de p3 e uma indicando a localidade dessas espécies, denominada p4.
+Primeiro vamos selecionar as tabelas. Vamos fazer duas. Uma indicando a abundância de espécies por dia, 
+denominada de p3 e uma indicando a localidade dessas espécies, denominada p4.
 ```
 p3<-reshape2::dcast(p2, Date + Locality ~ Species)
 excluir <- c("Date", "Locality")
 p3 <- p3[,!(names(p3)%in% excluir)]
 p4<-reshape2::dcast(p2, Date + Locality ~ Class)
 ```
-Agora a estimativa de riqueza
+Agora a estimativa de riqueza por localidade.
 ```
 pool1<-specpool(p3, p4$Locality) 
 pool1
@@ -238,7 +248,7 @@ pool <- poolaccum(p3)
 summary(pool, display = "chao")
 plot(pool)
 ```
-E nesse a grande diferença entre elas, onde o eix y é a riqueza real amostrada:
+E nesse a grande diferença entre elas, onde o eix y é a riqueza real amostrada (Verificar):
 `boxplot(specnumber(p3) ~ p4$Locality, col="#efff08", border="black", notch=TRUE)`
 
 Um outro gráfico. Primeiro a tabela.
