--- a/2021_07_13_PEFG_PEMF.md
+++ b/2021_07_13_PEFG_PEMF.md
@@ -217,12 +217,14 @@ p3=data.frame(p3, row.names=1)
 p3
 ```
 
+#### Riqueza
 Qual a riqueza?
 ```
 S <- specnumber(p3) 
 S
 ```
 
+#### Riqueza estimada
 Vamos também estimar a riqueza. Perceba que ela considerou tudo a mesma coisa.
 ```
 pool<-specpool(p3)
@@ -242,21 +244,20 @@ Agora a estimativa de riqueza por localidade.
 pool1<-specpool(p3, p4$Locality) 
 pool1
 ```
+
+#### Gráficos
 Dá pra ver a progressão dessas contas, considerando os dois nesse gráfico:
 ```
 pool <- poolaccum(p3)
 summary(pool, display = "chao")
 plot(pool)
 ```
-E nesse a grande diferença entre elas, onde o eix y é a riqueza real amostrada (Verificar):
-`boxplot(specnumber(p3) ~ p4$Locality, col="#efff08", border="black", notch=TRUE)`
 
 Um outro gráfico. Primeiro a tabela.
 ```
 p4<-reshape2::dcast(p2, Locality ~ Class)
 pool2<-data.frame(pool1, p4)
 ```
-
 Agora o gráfico.
 ```
 ggplot(pool2, aes(x = Species, y = chao)) + 
@@ -271,3 +272,4 @@ ggplot(pool2, aes(x = Species, y = chao)) +
      theme_classic() 
 #ggsave("relação riqueza e riqueza amostral.png",width = 15, height = 8, dpi = 600)  
 ```
+
