--- a/2021_07_13_PEFG_PEMF.md
+++ b/2021_07_13_PEFG_PEMF.md
@@ -19,13 +19,13 @@ Vamos instalar logo vários pacotes que possivelmente utilizaremos para selecion
 if(!require(pacman, quietly = TRUE))(install.packages("pacman")) 
 pacman::p_load(magrittr,dplyr) 
 pacman::p_load(ggplot2, devtools, ggrepel, graphics) 
-pacman::p_load(vegan) 
+pacman::p_load(vegan,lubridate) 
 ```
 
 #### Caregar Planilha
 ```
 pacman::p_load(openxlsx) 
-caminho.do.arquivo <- "/home/user/Área de Trabalho/Bio/projeto_publ/2021_tarsila/2021_07_06_tabela_atualizada.xlsx"
+caminho.do.arquivo <- "/home/user/Área de Trabalho/Bio/projeto_publ/gradientealt.xlsx"
 planilhatotal <- read.xlsx(caminho.do.arquivo, 
                            sheet = 1,
                            colNames = T, 
@@ -62,16 +62,27 @@ p2 <- subset(p2, !is.na(Species))
 `summary(p2)`
 
 #### Teste de plots
-Um teste simples
+Primeiro vamos configurar a data.
 
-`ts.plot(p2$Day)`
-
-Um gráfico um pouco mais elaborado. Vamos plotar as espécies no eixo y e as altitudes no eixo x, com cores vamos diferenciar as UCs.
 ```
-ggplot(p2, aes(x = Date, y = Species, colour = Order)) + 
+p3 <- p2 %>% 
+  select(Year, Month, Day) %>% 
+  mutate(Date = make_date(Year, Month, Day))
+
+Date <- data.frame(p2,p3)
+```
+
+`ts.plot(Date$Date)`
+
+Um gráfico um pouco mais elaborado. Vamos plotar as espécies no eixo y e as altitudes no eixo x, com cores vamos diferenciar as UCs. 
+
+Agora o gŕafico.
+```
+ggplot(Date, aes(x = Date, y = Species, colour = Order)) + 
   geom_point(size = 6, alpha = 0.7) +
   #geom_smooth(method = lm, se = TRUE) + 
-  scale_x_continuous(breaks = 0:20) +
+  #scale_x_continuous(breaks = 0:1) +
+  #scale_x_date(date_labels = "%Y %m %d") +
   facet_grid(Locality~.) +
   theme_classic()
 #ggsave("1.Species/Data.png",width = 10, height = 6, dpi = 300)
@@ -87,11 +98,11 @@ Vamos começar com uma análise para ver a suficiência amostral de cada local, 
 #### PEFG
 Agora vamos selecionar a UC. Primeiro para PEFG atribuindo uma seleção e denominado de p3.
 
-`p3 <- subset(p2, Locality == "PEFG")`
+`p3 <- subset(Date, Locality == "PEFG")`
 
 Vamos montar uma tabela utilizando a data de coleta pelas espécies coletadas. Utilizamremos como base a planilha p3 só com PEFG e denominar de acum.
 ```
-acum<-reshape2::dcast(p3, Day ~ Species)
+acum<-reshape2::dcast(p3, Date ~ Species)
 acum=data.frame(acum, row.names = 1)
 ```
 
@@ -123,7 +134,7 @@ Primeiro vamos instalar o pacote para as análises.
 Depois montar uma tabela onde teremos os dias de coleta e as localidade por sua abundância. Vamos subistituir a tabela p3.
 
 ```
-p3<-reshape2::dcast(p2, Date + Locality ~ Class, value.var = "individualCount", fun = length)
+p3<-reshape2::dcast(Date, Date + Locality ~ Class, value.var = "individualCount", fun = length)
 head(p3)
 ```
 
@@ -147,7 +158,6 @@ ggplot(p3, aes(x = Date, y = Mammalia, fill = Locality)) +
   geom_point(aes(color = Locality), size = 4, alpha = 0.7) +
   geom_smooth(method = lm, se = TRUE) + 
   ggtitle("Regressão linear entre a data de coleta e abundância para as Ucs") + 
-  scale_x_continuous(breaks = 0:20) +
   theme_classic()
 #ggsave("1.Abundancia  por data.png",width = 10, height = 6, dpi = 300)
 ```
@@ -156,11 +166,11 @@ Uma forma de ver a diferença entre as localidades é colocando em um gráfico. 
 
 Fazendo um boxplot das abundância entre as UCs fica evidente que existe uma grande diferença  o sucesso de registro.
 ```
-ggboxplot(p3, x = "Date", y = "Mammalia", color = "Locality", 
+ggboxplot(p3, x = "Date", y = "Mammalia", color = "Locality", alpha = 0.5,
     palette = c("#ff4308", "#00AFBB"), 
     fill = "Locality", 
     order = c("PEMF", "PEFG"), 
-    ylab = "Riqueza", xlab = "UCs")
+    ylab = "Abundância", xlab = "UCs")
 ```
 
 ### Normalidade
@@ -171,7 +181,7 @@ Mas, pensando nas premissas, será que os dados são normais? Vamos testar isso 
 Primeiro PEFG
 ```
 p4 <- subset(p3, Locality == "PEFG")
-shapiro.test(p3$Mammalia) 
+shapiro.test(p4$Mammalia) 
 ```
 A Hipótese nula nos dia que a distribuição é normal. Essa hipótese foi negada, então os dados não são normais. Vamos ver isso em gráfico?
 ```
@@ -206,13 +216,13 @@ Note que o p deu muito pequeno, negando a hipótese nula de que são iguais, ou 
 
 Vamos montar uma tabela onde teremos as Espécies pela Localidade e avisar que existe um cabeçalho para ver os dados.
 ```
-p3<-reshape2::dcast(p2, Species ~ Locality)
+p3<-reshape2::dcast(Date, Species ~ Locality)
 p3=data.frame(p3, row.names=1)
 p3
 ```
 Agora para o cálculo iremos fazer uma tabela de localidades por espécie. 
 ```
-p3<-reshape2::dcast(p2, Locality ~ Species)
+p3<-reshape2::dcast(Date, Locality ~ Species)
 p3=data.frame(p3, row.names=1)
 p3
 ```
@@ -234,10 +244,10 @@ pool
 Primeiro vamos selecionar as tabelas. Vamos fazer duas. Uma indicando a abundância de espécies por dia, 
 denominada de p3 e uma indicando a localidade dessas espécies, denominada p4.
 ```
-p3<-reshape2::dcast(p2, Date + Locality ~ Species)
+p3<-reshape2::dcast(Date, Date + Locality ~ Species)
 excluir <- c("Date", "Locality")
 p3 <- p3[,!(names(p3)%in% excluir)]
-p4<-reshape2::dcast(p2, Date + Locality ~ Class)
+p4<-reshape2::dcast(Date, Date + Locality ~ Class)
 ```
 Agora a estimativa de riqueza por localidade.
 ```
@@ -246,30 +256,19 @@ pool1
 ```
 
 #### Gráficos
-Dá pra ver a progressão dessas contas, considerando os dois nesse gráfico:
+Dá pra ver a progressão dessas contas, considerando os dois nesse gráfico. Primeiro vamos para PEFG:
+```
+p3 <- subset(Date, Locality == "PEFG")
+p3<-reshape2::dcast(p3, Date + Locality ~ Species)
+excluir <- c("Date", "Locality")
+p3 <- p3[,!(names(p3)%in% excluir)]
+```
+Agora o gráfico.
 ```
 pool <- poolaccum(p3)
 summary(pool, display = "chao")
 plot(pool)
 ```
 
-Um outro gráfico. Primeiro a tabela.
-```
-p4<-reshape2::dcast(p2, Locality ~ Class)
-pool2<-data.frame(pool1, p4)
-```
-Agora o gráfico.
-```
-ggplot(pool2, aes(x = Species, y = chao)) + 
-     geom_point(aes(size=Mammalia, colour = Locality), alpha = 0.65)+ 
-     scale_size(range = c(5, 20), name = "Abundância") + 
-     ggtitle("Diversidade por tipo de registro") + 
-     scale_x_continuous(breaks = 1:15) +
-     xlab("Riqueza") + 
-     ylab("Riqueza estimada") + 
-     theme(axis.title = element_text(size = 18), 
-     axis.text = element_text(size = 14))+ 
-     theme_classic() 
-#ggsave("relação riqueza e riqueza amostral.png",width = 15, height = 8, dpi = 600)  
-```
+Fazer o mesmo com PEMF 
 
