--- a/2021_07_13_PEFG_PEMF.md
+++ b/2021_07_13_PEFG_PEMF.md
@@ -205,9 +205,9 @@ Agora para PEFG
 PEFG <- subset(p3, Locality == "PEFG")
 PEFG <- sample(PEFG$Mammalia,size=40, replace=TRUE)
 ```
-Por fim o teste.
+Por fim o teste de Mann-Whtiney.O teste de Mann-Whitney (Wilcoxon rank-sum test) é indicado para comparação de dois grupos não pareados para se verificar se pertencem ou não à mesma população e cujos requisitos para aplicação do teste t de Student não foram cumpridos.
 ```
-res <- wilcox.exact(PEFG,PEMF, paired = TRUE) 
+res <- wilcox.exact(PEFG,PEMF, paired = FALSE) 
 res
 ```
 Note que o p deu muito pequeno, negando a hipótese nula de que são iguais, ou seja, são realmente diferentes.
